05/27/2005
----------
1. change language name to more official ones (language_area.encoding)
   zh_TW.Big5.utf8   -> zh_TW.utf8
   zh_CN.GB2312.utf8 -> zh_CN.utf8


05/22/2005
----------
1. mirror site change
   from http://openwebmail.kkellas.com.my
   to   http://openwebmail.opusplc.com
   (thanks to Ramli Mohd, meli.AT.opusplc.com)


05/12/2005
----------
1. Portuguese Brazil language and template files translation update
   (thanks to Julio Cesar Cunha, julio.AT.cnm.org.br)
2. fix a bug that openwebmail-tool.pl always say
   "operation is only available to root" in persistence mode
   (this bug is introduced by change 2 b 20050507)


05/10/2005
----------
1. new iconset: Default.Polish
   (thanks to Tomasz Wieckowski, t.wieckowski.AT.amp.edu.pl)
2. minor change to advsearch output layout


05/08/2005
----------
1. fix a bug that openwebmail-tool.pl --init will have db creation error
   (this is introduced by change 2 b in 20050507)
2. fix a bug that number in $) may be lost after being copied to and from
   a variable
ps:this was due to a strange behavior that
   the 2nd number in a string will be always ignored by $)


05/07/2005
----------
1. fix the problem that option ldap_abook_container with null value
   in openwebmail.conf will be always overridden by option in
   openwebmail.conf.default
   (thanks to Luigi Mazzieri, lmazzieri.AT.emerenzio.net for his fix)
2. a. use mktmpdir to make temporary dir for non-automic tmp file creation
      to avoid race condition
   b. release the ruid/euid/egid www immediately after script start for
      better security
   (thanks to Matej Vela, vela.AT.debian.org for his suggestion)


05/06/2005
----------
1. fix the bug that addressbook import lets user upload any kind of file
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his fix)
2. fix the bug that addressbook import can would fail if the FullName
   field is choosed
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his fix)