@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050527
+releasedate		20050615
 
 ##############################################################################
 # host dependent configuration
